--- a/pom.xml
+++ b/pom.xml
@@ -48,4 +48,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <build>
+        <finalName>adminRestAPI</finalName>
+    </build>
 </project>
